[gd_scene load_steps=17 format=3 uid="uid://dtmh6cc25ct0c"]

[ext_resource type="Texture2D" uid="uid://ie7figw6autx" path="res://Tiles/more_stone.png" id="1_4upu1"]
[ext_resource type="Script" uid="uid://8rw5s7ujl1qj" path="res://Scripts/sell_items.gd" id="1_np4ng"]
[ext_resource type="FontFile" uid="uid://dqgk5mk6g0y7u" path="res://Font/RasterForgeRegular.ttf" id="2_uhxtw"]
[ext_resource type="Texture2D" uid="uid://0x8injetcjxg" path="res://Tiles/coin1_16x16.png" id="2_ysrdq"]
[ext_resource type="AudioStream" uid="uid://b2festmfkq0th" path="res://Sounds/sell_sfx.mp3" id="5_ysrdq"]
[ext_resource type="AudioStream" uid="uid://bkq8qju58xiug" path="res://Sounds/incorrect.wav" id="6_mnobx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g334k"]
atlas = ExtResource("2_ysrdq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kjosx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g334k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_na4qu"]
atlas = ExtResource("1_4upu1")
region = Rect2(144, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_np4ng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_na4qu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yqtc1"]
atlas = ExtResource("1_4upu1")
region = Rect2(0, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ysrdq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqtc1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tsbx5"]
atlas = ExtResource("1_4upu1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mnobx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsbx5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4upu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjosx"]

[node name="Sell_items" type="Control"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_np4ng")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -109.0
offset_right = 680.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)

[node name="coin_sprite" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(817.5, 32.4999)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kjosx")

[node name="coin_label" type="Label" parent="Panel"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -743.0
offset_top = 20.0
offset_right = -53.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_uhxtw")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 106.0
offset_top = 87.0
offset_right = 745.0
offset_bottom = 246.0

[node name="stone" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(197, 161)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_np4ng")

[node name="branch" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(427, 161)
scale = Vector2(5, 6.402)
sprite_frames = SubResource("SpriteFrames_ysrdq")

[node name="grass" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(653, 171)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_mnobx")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -22.5
offset_right = 320.0
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="sell_1_stone" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_4upu1")
text = "Sell 1 stone"

[node name="sell_1_branch" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_4upu1")
text = "Sell 1 branch"

[node name="sell_1_grass" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_4upu1")
text = "Sell 1 grass"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = 77.5
offset_right = 320.0
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="sell_all_stone" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4upu1")
text = "Sell all stone"

[node name="sell_all_branch" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4upu1")
text = "Sell all branch"

[node name="sell_all_grass" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4upu1")
text = "Sell all grass"

[node name="sell_all" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -136.0
offset_right = 93.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_kjosx")
text = "Sell all"

[node name="stone_price" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 155.0
offset_top = 207.5
offset_right = 241.0
offset_bottom = 230.5
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
text = "50 coins"

[node name="branch_price" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 386.0
offset_top = 207.5
offset_right = 472.0
offset_bottom = 230.5
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
text = "20 coins"

[node name="branch_price2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 615.0
offset_top = 207.5
offset_right = 689.0
offset_bottom = 230.5
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_uhxtw")
text = "5 coins"

[node name="sell_sound_effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ysrdq")
volume_db = -3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mnobx")

[connection signal="pressed" from="Panel/HBoxContainer/sell_1_stone" to="." method="_on_sell_1_stone_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/sell_1_branch" to="." method="_on_sell_1_branch_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/sell_1_grass" to="." method="_on_sell_1_grass_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/sell_all_stone" to="." method="_on_sell_all_stone_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/sell_all_branch" to="." method="_on_sell_all_branch_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/sell_all_grass" to="." method="_on_sell_all_grass_pressed"]
[connection signal="pressed" from="Panel/sell_all" to="." method="_on_sell_all_pressed"]
